# metaflow-clockwork

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
.planning/: BRIDGE_CONTRACT.md  LEDGER_CONTRACT.md  LEDGER_REPLAY_CONTRACT.md  MILESTONES.md  OPERATOR_GUIDE.md  PROJECT.md  RELEASE_READINESS.md  REQUIREMENTS.md  ROADMAP.md  RUN_SPEC_CONTRACT.md  STATE.md
docs/: quickstart.md
examples/: basic_clockwork.py  basic_harmonics.json
metaflow_clockwork/: __init__.py  cli.py  engine.py  events.py  ledger_replay.py  ledger_sink.py  qrbt_bridge.py  run_spec.py
prompts/: PROMPT_HYGIENE.md  PROMPT_TEMPLATE_V1.md  README.md  SELF_CONTAINED_EXECUTION_DOCTRINE.md
prompts/contracts/: local_runtime_agent.v1.json
prompts/examples/: local_runtime_agent.prompt.md
tests/: test_cli_phase5.py  test_engine_phase2.py  test_ledger_replay_phase8.py  test_ledger_sink_phase3.py  test_operator_phase9.py  test_prompt_assets_public.py  test_qrbt_bridge_phase4.py  test_run_spec_phase6.py
